feat: menambahkan paket matakuliah di data seeder