@@ -13,6 +13,7 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 
@@ -39,7 +40,6 @@ public class DataSeeder implements CommandLineRunner {
     private final BiodataDosenRepository biodataDosenRepository;
     private final ActivityLogRepository activityLogRepository;
     private final PasswordEncoder passwordEncoder;
-    // --- REPOSITORIES BARU ---
     private final PaketMatakuliahRepository paketMatakuliahRepository;
     private final DetailPaketMatakuliahRepository detailPaketMatakuliahRepository;
 
@@ -149,9 +149,9 @@ public class DataSeeder implements CommandLineRunner {
         // Mahasiswa lainnya
         for (int i = 0; i < 10; i++) {
             User mhsUser = new User(); mhsUser.setUsername(faker.name().username()); mhsUser.setPassword(passwordEncoder.encode("mahasiswa123")); mhsUser.setRole(mahasiswaRole);
-            User savedMhsUser = userRepository.save(mhsUser);
+            User savedDosenUser = userRepository.save(mhsUser);
 
-            Mahasiswa mahasiswa = new Mahasiswa(); mahasiswa.setUser(savedMhsUser); mahasiswa.setNamaLengkap(faker.name().fullName()); mahasiswa.setNim("2025" + faker.number().digits(4)); mahasiswa.setJurusan(i % 2 == 0 ? teologi : pak); mahasiswa.setStatus(StatusMahasiswa.AKTIF);
+            Mahasiswa mahasiswa = new Mahasiswa(); mahasiswa.setUser(savedDosenUser); mahasiswa.setNamaLengkap(faker.name().fullName()); mahasiswa.setNim("2025" + faker.number().digits(4)); mahasiswa.setJurusan(i % 2 == 0 ? teologi : pak); mahasiswa.setStatus(StatusMahasiswa.AKTIF);
             mahasiswa.setPembimbingAkademik(createdDosens.get(i % createdDosens.size())); // Assign Dosen PA
             Mahasiswa savedMhs = mahasiswaRepository.save(mahasiswa);
             createdMahasiswas.add(savedMhs);
@@ -160,33 +160,82 @@ public class DataSeeder implements CommandLineRunner {
             biodataMahasiswaRepository.save(biodataMhs);
         }
 
-        // 6. Buat Mata Kuliah
-        MataKuliah teo401 = new MataKuliah(); teo401.setKodeMatkul("TEO401"); teo401.setNamaMatkul("Teologi Kontemporer"); teo401.setSks(3); teo401.setJurusan(teologi); mataKuliahRepository.save(teo401);
-        MataKuliah pak401 = new MataKuliah(); pak401.setKodeMatkul("PAK401"); pak401.setNamaMatkul("Pendidikan Kristen Lanjutan"); pak401.setSks(3); pak401.setJurusan(teologi); mataKuliahRepository.save(pak401);
-        MataKuliah bib401 = new MataKuliah(); bib401.setKodeMatkul("BIB401"); bib401.setNamaMatkul("Eksegesis Lanjutan"); bib401.setSks(3); bib401.setJurusan(teologi); mataKuliahRepository.save(bib401);
-        MataKuliah pra401 = new MataKuliah(); pra401.setKodeMatkul("PRA401"); pra401.setNamaMatkul("Praktik Pelayanan Lanjutan"); pra401.setSks(2); pra401.setJurusan(teologi); mataKuliahRepository.save(pra401);
-        MataKuliah sej401 = new MataKuliah(); sej401.setKodeMatkul("SEJ401"); sej401.setNamaMatkul("Sejarah Gereja Modern"); sej401.setSks(2); sej401.setJurusan(teologi); mataKuliahRepository.save(sej401);
-        List<MataKuliah> matkulTeologiSm7 = List.of(teo401, pak401, bib401, pra401, sej401);
+        // 6. Buat Semua Mata Kuliah dan Paketnya
+        List<MataKuliah> semuaMatkulTeologi = new ArrayList<>();
+        // Semester 1
+        MataKuliah teo101 = createMatkul("TEO101", "Pengantar Perjanjian Lama", 3, teologi);
+        MataKuliah teo102 = createMatkul("TEO102", "Pengantar Perjanjian Baru", 3, teologi);
+        MataKuliah pak101 = createMatkul("PAK101", "Dasar-Dasar PAK", 2, teologi);
+        createPaket(teologi, 1, "2021/2022", Arrays.asList(teo101, teo102, pak101));
+        semuaMatkulTeologi.addAll(Arrays.asList(teo101, teo102, pak101));
+
+        // Semester 2
+        MataKuliah teo201 = createMatkul("TEO201", "Teologi Sistematika I", 3, teologi);
+        MataKuliah bib201 = createMatkul("BIB201", "Bahasa Yunani I", 2, teologi);
+        MataKuliah mis201 = createMatkul("MIS201", "Misiologi I", 2, teologi);
+        createPaket(teologi, 2, "2021/2022", Arrays.asList(teo201, bib201, mis201));
+        semuaMatkulTeologi.addAll(Arrays.asList(teo201, bib201, mis201));
+
+        // Semester 3
+        MataKuliah teo301 = createMatkul("TEO301", "Teologi Sistematika II", 3, teologi);
+        MataKuliah bib301 = createMatkul("BIB301", "Bahasa Ibrani I", 2, teologi);
+        MataKuliah sej301 = createMatkul("SEJ301", "Sejarah Gereja Awal", 3, teologi);
+        createPaket(teologi, 3, "2022/2023", Arrays.asList(teo301, bib301, sej301));
+        semuaMatkulTeologi.addAll(Arrays.asList(teo301, bib301, sej301));
+
+        // Semester 4
+        MataKuliah teo402 = createMatkul("TEO402", "Hermeneutik", 3, teologi);
+        MataKuliah pak402 = createMatkul("PAK402", "Psikologi Perkembangan", 3, teologi);
+        MataKuliah pra402 = createMatkul("PRA402", "Homiletika I", 2, teologi);
+        createPaket(teologi, 4, "2022/2023", Arrays.asList(teo402, pak402, pra402));
+        semuaMatkulTeologi.addAll(Arrays.asList(teo402, pak402, pra402));
         
-        // 7. Buat Paket Matakuliah
-        PaketMatakuliah paketTeologiSm7 = new PaketMatakuliah();
-        paketTeologiSm7.setNamaPaket("Paket Matakuliah Teologi Semester 7");
-        paketTeologiSm7.setJurusan(teologi);
-        paketTeologiSm7.setSemesterKe(7);
-        paketTeologiSm7.setTahunAkademik("2024/2025");
-        paketMatakuliahRepository.save(paketTeologiSm7);
+        // Semester 5
+        MataKuliah teo501 = createMatkul("TEO501", "Etika Kristen", 3, teologi);
+        MataKuliah bib501 = createMatkul("BIB501", "Eksegesis Perjanjian Lama", 3, teologi);
+        MataKuliah mis501 = createMatkul("MIS501", "Apologetika", 2, teologi);
+        createPaket(teologi, 5, "2023/2024", Arrays.asList(teo501, bib501, mis501));
+        semuaMatkulTeologi.addAll(Arrays.asList(teo501, bib501, mis501));
 
-        for(MataKuliah mk : matkulTeologiSm7) {
-            DetailPaketMatakuliah detail = new DetailPaketMatakuliah();
-            detail.setPaketMatakuliah(paketTeologiSm7);
-            detail.setMataKuliah(mk);
-            detailPaketMatakuliahRepository.save(detail);
+        // Semester 6
+        MataKuliah teo601 = createMatkul("TEO601", "Dogmatika", 3, teologi);
+        MataKuliah bib601 = createMatkul("BIB601", "Eksegesis Perjanjian Baru", 3, teologi);
+        MataKuliah pra601 = createMatkul("PRA601", "Pastoral Konseling", 2, teologi);
+        createPaket(teologi, 6, "2023/2024", Arrays.asList(teo601, bib601, pra601));
+        semuaMatkulTeologi.addAll(Arrays.asList(teo601, bib601, pra601));
+
+        // Semester 7 (yang akan diambil)
+        MataKuliah teo701 = createMatkul("TEO701", "Teologi Kontemporer", 3, teologi);
+        MataKuliah pak701 = createMatkul("PAK701", "Pendidikan Kristen Lanjutan", 3, teologi);
+        MataKuliah bib701 = createMatkul("BIB701", "Eksegesis Lanjutan", 3, teologi);
+        MataKuliah pra701 = createMatkul("PRA701", "Praktik Pelayanan Lanjutan", 2, teologi);
+        MataKuliah sej701 = createMatkul("SEJ701", "Sejarah Gereja Modern", 2, teologi);
+        createPaket(teologi, 7, "2024/2025", Arrays.asList(teo701, pak701, bib701, pra701, sej701));
+        semuaMatkulTeologi.addAll(Arrays.asList(teo701, pak701, bib701, pra701, sej701));
+        
+        // 7. Buat Riwayat KRS untuk Mahasiswa Demo (Semester 1-6)
+        // Ini penting agar sistem bisa menghitung semester aktifnya adalah 7
+        List<MataKuliah> historyMatkul = semuaMatkulTeologi.subList(0, semuaMatkulTeologi.indexOf(teo701));
+        for(MataKuliah mk : historyMatkul) {
+            Kelas kelasHistori = new Kelas();
+            kelasHistori.setMataKuliah(mk);
+            kelasHistori.setDosen(createdDosens.get(faker.number().numberBetween(0, createdDosens.size())));
+            kelasHistori.setTahunAkademik("HISTORI"); // Tandai sebagai histori
+            kelasHistori.setSemester(Semester.GANJIL); // Tidak relevan, tapi harus diisi
+            kelasRepository.save(kelasHistori);
+
+            Krs krsHistori = new Krs();
+            krsHistori.setMahasiswa(mhsDemo);
+            krsHistori.setKelas(kelasHistori);
+            krsHistori.setStatusPersetujuan(StatusPersetujuan.DISETUJUI);
+            krsHistori.setNilaiHuruf(faker.options().option("A", "A-", "B+", "B"));
+            krsHistori.setNilaiAkhir(new BigDecimal(faker.number().randomDouble(2, 80, 95)));
+            krsRepository.save(krsHistori);
         }
-
-        // 8. Buat Kelas & Jadwal Ujian
-        List<Kelas> createdKelas = new ArrayList<>();
-        for(MataKuliah mk : matkulTeologiSm7) {
-            Kelas kelas = new Kelas();
+        
+        // 8. Buat Kelas & Jadwal Ujian (Hanya untuk Semester 7)
+        for(MataKuliah mk : semuaMatkulTeologi.subList(semuaMatkulTeologi.indexOf(teo701), semuaMatkulTeologi.size())) {
+             Kelas kelas = new Kelas();
             kelas.setMataKuliah(mk);
             kelas.setDosen(createdDosens.get(faker.number().numberBetween(0, createdDosens.size())));
             kelas.setTahunAkademik("2024/2025");
@@ -194,35 +243,10 @@ public class DataSeeder implements CommandLineRunner {
             kelas.setHari(faker.options().option("Senin", "Selasa", "Rabu", "Kamis", "Jumat"));
             kelas.setJamMulai(LocalTime.of(faker.number().numberBetween(8, 15), 0));
             kelas.setRuangan("R." + faker.number().numberBetween(101, 305));
-            Kelas savedKelas = kelasRepository.save(kelas);
-            createdKelas.add(savedKelas);
-            
-            JadwalUjian ujian = new JadwalUjian(); ujian.setKelas(savedKelas); ujian.setJenisUjian(JenisUjian.UAS); ujian.setTanggalUjian(LocalDate.now().plusMonths(3)); ujian.setJamMulai(LocalTime.of(8,0)); ujian.setJamSelesai(LocalTime.of(10,0)); ujian.setRuangan("Aula");
-            jadwalUjianRepository.save(ujian);
-        }
-
-        // 9. Buat KRS & Presensi
-        // KRS untuk mahasiswa demo (berdasarkan paket)
-        for(Kelas k : createdKelas){
-            Krs krs = new Krs();
-            krs.setMahasiswa(mhsDemo);
-            krs.setKelas(k);
-            krs.setStatusPersetujuan(StatusPersetujuan.DISETUJUI); // Anggap sudah disetujui
-            krs.setNilaiHuruf("A"); // Beri nilai dummy
-            krs.setNilaiAkhir(new BigDecimal("95.00"));
-            Krs savedKrs = krsRepository.save(krs);
-
-            for (int i = 1; i <= 14; i++) { // Buat 14 pertemuan
-                PresensiMahasiswa presensi = new PresensiMahasiswa();
-                presensi.setKrs(savedKrs);
-                presensi.setPertemuanKe(i);
-                presensi.setStatusHadir(faker.options().option(StatusHadir.HADIR, StatusHadir.HADIR, StatusHadir.SAKIT, StatusHadir.IZIN, StatusHadir.ALFA));
-                presensi.setTanggal(LocalDate.now().minusDays(90).plusDays(i*7));
-                presensiMahasiswaRepository.save(presensi);
-            }
+            kelasRepository.save(kelas);
         }
         
-        // 10. Buat Keuangan
+        // 9. Buat Keuangan
         KomponenBiaya spp = new KomponenBiaya(); spp.setNamaKomponen("Biaya Kuliah Bulanan"); spp.setJenisBiaya(JenisBiaya.BULANAN); komponenBiayaRepository.save(spp);
         KomponenBiaya pembangunan = new KomponenBiaya(); pembangunan.setNamaKomponen("Uang Pembangunan"); pembangunan.setJenisBiaya(JenisBiaya.SEKALI_BAYAR); komponenBiayaRepository.save(pembangunan);
 
@@ -233,7 +257,7 @@ public class DataSeeder implements CommandLineRunner {
             DetailTagihan detail = new DetailTagihan(); detail.setTagihanMahasiswa(savedTagihan); detail.setKomponenBiaya(spp); detail.setJumlah(new BigDecimal("3500000"));
             detailTagihanRepository.save(detail);
 
-            if (faker.bool().bool()) {
+            if (mhs.equals(mhsDemo) || faker.bool().bool()) { // Pastikan mhsDemo lunas
                 Pembayaran bayar = new Pembayaran(); bayar.setTagihan(savedTagihan); bayar.setJumlahBayar(new BigDecimal("3500000")); bayar.setTanggalBayar(java.time.LocalDateTime.now()); bayar.setMetodePembayaran("Transfer Bank"); bayar.setStatusVerifikasi(StatusVerifikasi.BERHASIL);
                 pembayaranRepository.save(bayar);
                 savedTagihan.setStatus(StatusTagihan.LUNAS);
@@ -241,16 +265,43 @@ public class DataSeeder implements CommandLineRunner {
             }
         }
         
-        // 11. Buat Pengumuman
+        // 10. Buat Pengumuman
         Pengumuman pengumuman1 = new Pengumuman(); pengumuman1.setJudul("Batas Akhir Pembayaran UKT"); pengumuman1.setIsi("Batas akhir pembayaran UKT untuk semester Ganjil 2024/2025 adalah tanggal 30 September 2024. Harap segera melakukan pembayaran."); pengumuman1.setPembuat(adminUser); pengumuman1.setTanggalTerbit(java.time.LocalDateTime.now().minusDays(1));
         pengumumanRepository.save(pengumuman1);
         Pengumuman pengumuman2 = new Pengumuman(); pengumuman2.setJudul("Validasi KRS oleh Dosen PA"); pengumuman2.setIsi("Periode validasi KRS oleh Dosen Pembimbing Akademik akan dilaksanakan mulai tanggal 25 hingga 31 Agustus 2024."); pengumuman2.setPembuat(adminUser); pengumuman2.setTanggalTerbit(java.time.LocalDateTime.now().minusDays(2));
         pengumumanRepository.save(pengumuman2);
         
-        // 12. Buat Activity Log
+        // 11. Buat Activity Log
         ActivityLog log = new ActivityLog(); log.setUser(adminUser); log.setAksi("SEED_DATABASE"); log.setDeskripsi("Semua data dummy berhasil dibuat."); log.setTimestamp(java.time.LocalDateTime.now());
         activityLogRepository.save(log);
 
         System.out.println("Seeder selesai dijalankan.");
+    }
+
+    // Helper method untuk membuat MataKuliah
+    private MataKuliah createMatkul(String kode, String nama, int sks, Jurusan jurusan) {
+        MataKuliah mk = new MataKuliah();
+        mk.setKodeMatkul(kode);
+        mk.setNamaMatkul(nama);
+        mk.setSks(sks);
+        mk.setJurusan(jurusan);
+        return mataKuliahRepository.save(mk);
+    }
+
+    // Helper method untuk membuat PaketMatakuliah
+    private void createPaket(Jurusan jurusan, int semester, String tahun, List<MataKuliah> matkulList) {
+        PaketMatakuliah paket = new PaketMatakuliah();
+        paket.setNamaPaket("Paket Matakuliah " + jurusan.getNamaJurusan() + " Semester " + semester);
+        paket.setJurusan(jurusan);
+        paket.setSemesterKe(semester);
+        paket.setTahunAkademik(tahun);
+        paketMatakuliahRepository.save(paket);
+
+        for (MataKuliah mk : matkulList) {
+            DetailPaketMatakuliah detail = new DetailPaketMatakuliah();
+            detail.setPaketMatakuliah(paket);
+            detail.setMataKuliah(mk);
+            detailPaketMatakuliahRepository.save(detail);
+        }
     }
 }
